<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="clear">Clear form</string>
    <string-array name="compatibility">
        <item>\?</item>
        <item>Sagittarius, Leo, Libra, Aries, Gemini.</item>
        <item>Scorpio, Taurus, Cancer, Sagittarius, Virgo, Capricorn.</item>
        <item>Sagittarius, Leo, Aquarius.</item>
        <item>Cancer, Libra, Virgo.</item>
        <item>Leo, Libra, Gemini, Capricorn, Sagittarius.</item>
        <item>Scorpio, Taurus, Libra, Sagittarius.</item>
        <item>Sagittarius, Virgo, Capricorn, Scorpio, Gemini.</item>
        <item>Taurus, Gemini, Scorpio, Leo, Libra, Cancer.</item>
        <item>Gemini, Virgo, Sagittarius, Leo, Aquarius.</item>
        <item>Cancer, Taurus, Pisces, Leo, Virgo.</item>
        <item>Leo, Gemini, Cancer, Virgo, Pisces.</item>
        <item>Leo, Scorpio, Gemini, Cancer, Virgo.</item>
    </string-array>
    <string name="data_entry">Enter data</string>
    <string name="name_generation">Generate name</string>
    <string name="preference_active_screen">Always on</string>
    <string name="preference_active_screen_summary">Keeps the screen on while the app is active</string>
    <string name="preference_audio">Audio</string>
    <string name="preference_enable_ads">Enabled ads</string>
    <string name="preference_enable_ads_summary_off">Show ads inside the app</string>
    <string name="preference_enable_ads_summary_on">Thanks for supporting me!</string>
    <string name="preference_enable_audio">Enable audio</string>
    <string name="preference_enable_audio_summary">Enables and allows to configure audio (sounds, voice) from the app</string>
    <string name="preference_enable_particles">Enable particles</string>
    <string name="preference_enable_particles_summary">Enables particle generation within the app</string>
    <string name="preference_enable_sounds">Enable sounds</string>
    <string name="preference_enable_sounds_summary">Enables sounds from the app</string>
    <string name="preference_enable_voice">Enable voice</string>
    <string name="preference_enable_voice_summary">Enables a TTS voice that reads texts in the app</string>
    <string name="preference_fortune_teller">Fortune-teller</string>
    <string name="preference_fortune_teller_aspect">Aspect</string>
    <string name="preference_fortune_teller_aspect_summary">Change the fortune-teller aspect</string>
    <string name="preference_greetings">Enable greetings</string>
    <string name="preference_greetings_summary">Allows the fortune-teller to greet</string>
    <string name="preference_hide_drawer">Hide drawer</string>
    <string name="preference_hide_drawer_summary">Hides the navigation drawer when an item is selected</string>
    <string name="preference_interface">Interface</string>
    <string name="preference_keep_form">Keep form</string>
    <string name="preference_keep_form_summary">Keeps form data even after closing the app</string>
    <string name="preference_language">Language</string>
    <string name="preference_language_summary">Change the app language</string>
    <string name="preference_opinions">Enable opinions</string>
    <string name="preference_opinions_summary">Allows the fortune-teller to say opinions about other people</string>
    <string name="preference_phrases">Enable phrases</string>
    <string name="preference_phrases_summary">Allows the fortune-teller to say common phrases</string>
    <string name="preference_refresh_frequency">Frequency of change</string>
    <string name="preference_refresh_frequency_summary">Change the time between each phrase from the fortune-teller</string>
    <string name="preference_registry">Registry</string>
    <string name="preference_save_enquiries">Save enquiries</string>
    <string name="preference_save_enquiries_summary">Allows the app to save the form data from enquiries</string>
    <string name="preference_save_names">Save names</string>
    <string name="preference_save_names_summary">Allows the app to save the entered names so they can be shown as suggestions</string>
    <string name="preference_screen">Screen</string>
    <string name="preference_seed">Seed</string>
    <string name="preference_seed_summary">Use a seed to generate the aspect and messages from the fortune-teller</string>
    <string name="preference_seed_title">Enter a seed</string>
    <string name="preference_speech_synthesis">Speech synthesis</string>
    <string name="preference_text_reading">Text reading</string>
    <string name="preference_text_reading_summary">Change the text type that can be read in the app</string>
    <string name="preference_theme">Theme</string>
    <string name="preference_theme_summary">Change the app theme</string>
    <string name="preference_update_frequency">Frequency of update</string>
    <string name="preference_update_frequency_summary">Change the time between each prediction update</string>
    <string name="reload">Generate enquiry</string>
    <string name="save">Save enquiry</string>
    <string name="selector">Select enquiry</string>
</resources>