<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_enquiry"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_data_entry"
            android:icon="@drawable/enquiry"
            android:title="@string/data_entry" />
        <item
            android:id="@+id/nav_reload"
            android:icon="@drawable/reload"
            android:title="@string/reload" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/save"
            android:title="@string/save" />
        <item
            android:id="@+id/nav_inquiry"
            android:icon="@drawable/form"
            android:title="…" />
        <item
            android:id="@+id/nav_selector"
            android:icon="@drawable/form"
            android:title="@string/selector" />
        <item
            android:id="@+id/nav_clear"
            android:icon="@drawable/clear"
            android:title="@string/clear" />
    </group>

    <group
        android:id="@+id/nav_tools"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_compatibility"
            android:icon="@drawable/heart_half"
            android:title="@string/compatibility" />
        <item
            android:id="@+id/nav_name_generation"
            android:icon="@drawable/box"
            android:title="@string/name_generation" />
    </group>
</menu>